fix: css code wrap

--- a/themes/api-platform/assets/css/main.css
+++ b/themes/api-platform/assets/css/main.css
@@ -208,7 +208,8 @@
 /* CodeLine */
 
 .light .chroma .cl {
-  color: #24292E
+  color: #24292E;
+  white-space: pre-wrap;
 }
 
 /* LineLink */
@@ -746,6 +747,7 @@
 /* CodeLine */
 
 .dark .chroma .cl {
+  white-space: pre-wrap;
 }
 
 /* LineLink */
